--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@ body{
 }
 
 header{
+    color: #fff;
     font-size: 2.5rem;
 }
+/* background-image: url(https://wallpaperaccess.com/full/1678169.jpg); */
 .main{
-    background-image: url(https://wallpaperaccess.com/full/1678169.jpg);
+    background-image: url(https://wallpaperaccess.com/full/885059.jpg);
     min-height: 100vh;
     background-size: cover;
     display: flex;
@@ -16,25 +18,96 @@ header{
 }
 
 .weather-dashboard-container{
-    margin: 60px;
+    margin-top: 20px;
     background: #fff;
     border-radius: 32px;
     box-shadow: 0 0 16px rgb(0 0 0 / 50%);
-    padding:10px;
 }
+
 .current-weather-display{
-    /* background-image: url(https://wallpaperaccess.com/full/1678258.png); */
+    background-image: url(https://wallpaperaccess.com/full/1678258.png);
     background-size: cover;
     display: flex;
-    padding: 40px 0;
-    flex-direction: column;
+    padding: 80px 0;
+    flex-direction: row;
     background-size: cover;
     border-top-left-radius: 32px;
     border-top-right-radius: 32px;
     color: black;
     position: relative;
 }
+.current-weather-display-left{
+    margin-top: -4%;
+    margin-left: 30%;
+}
+#current-city{
+    font-size: 1.8rem;
+}
 
+#current-temp{
+    padding-left: 2%;
+    font-size: 1.5rem;
+}
+
+.current-weather-display-right{
+    text-align: center;
+}
+/* .current-humidity-container,.current-wind-container,.current-uvindex-container{
+    margin: 10%;
+    display: flex;
+    flex-direction: column;
+} */
+
+.app-bottom{
+    margin-top: 2%;
+    padding: 2%;
+}
+.search-header{
+    font-size: 1.5rem;
+}
+
+.search-bar{
+    display: flex;
+    align-items: center;
+}
+
+#cityName{
+    margin-right: 2%;
+}
+.city-history-display{
+    margin-left: 5%;
+}
+
+a{
+    text-decoration: none;
+    color: darkgrey;
+}
+
+.five-day-forecast{
+    display: flex;
+    flex-direction: column;
+
+}
+.five-day-forecast-header{
+    font-size: 1.5rem;
+}
+
+.forecastDisplay{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 5%;
+}
+
+#forecastItem{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.1rem;
+}
+#forecastDate,#forecastTemp,#forecastDescrip{
+    margin-bottom: 10%;
+}
 #icon{
     width:50px;
     height: 50px;
