--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ header{
 }
 
 .current-weather-display-right{
+    margin-left: 5%;
     text-align: center;
 }
 /* .current-humidity-container,.current-wind-container,.current-uvindex-container{
@@ -59,8 +60,7 @@ header{
 } */
 
 .app-bottom{
-    margin-top: 2%;
-    padding: 2%;
+    padding: 3%;
 }
 .search-header{
     font-size: 1.5rem;
