--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ header {
   color: #fff;
   font-size: 2.5rem;
 }
-/* background-image: url(https://wallpaperaccess.com/full/1678169.jpg); */
 .main {
   background-image: url(https://wallpaperaccess.com/full/885059.jpg);
   min-height: 100vh;
@@ -18,6 +17,8 @@ header {
 }
 
 .weather-dashboard-container {
+  width:860px;
+  height: 600px;
   margin-top: 20px;
   background: #fff;
   border-radius: 32px;
@@ -28,31 +29,44 @@ header {
   background-image: url(https://wallpaperaccess.com/full/1678258.png);
   background-size: cover;
   display: flex;
-  padding: 80px 0;
+  padding: 50px 0;
   flex-direction: row;
   background-size: cover;
   border-top-left-radius: 32px;
   border-top-right-radius: 32px;
   color: black;
-  position: relative;
+  align-items: center;
+  justify-content:center;
 }
 .current-weather-display-left {
-  margin-top: -2%;
-  margin-left: 30%;
+  margin-left: 10%;
+  padding-right: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+
+}
+.current-weather-display-left-bottom{
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+  margin-top: -10px;
+  margin-left: 5px;
 }
 #current-city {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
+  font-weight: 500;
 }
 
 #current-temp {
-  padding-left: 2%;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
 }
 
 .current-weather-display-right {
   width: 300px;
-  margin-left: 5%;
   text-align: center;
+  font-size: 1rem;
+  letter-spacing: 1px;
 }
 
 .app-bottom {
@@ -65,6 +79,7 @@ header {
 .search-bar {
   display: flex;
   align-items: center;
+  margin-top: 3%;
 }
 
 #cityName {
@@ -92,7 +107,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 5%;
+  margin-top: 2%;
 }
 
 #forecastItem {
@@ -103,10 +118,27 @@ a {
 }
 #forecastDate,
 #forecastTemp,
-#forecastDescrip {
+#forecastHumidity,
+#forecastWind {
   margin-bottom: 10%;
+  font-size: small;
 }
-#icon {
-  width: 50px;
-  height: 50px;
+#icon, #current-icon{
+  width: 70px;
+  height: 70px;
+}
+#current-uvindex {
+  border-radius: 25px;
+}
+#forecastDate {
+  font-weight: 400;
+  font-size: 1rem;
+}
+#forecastTemp {
+  font-size: 1.25rem;
+  margin-top: 1rem;
+  color: rgba(0, 0, 0, 0.5);
+}
+#forecastHumidity,#forecastWind{
+  color: rgba(0, 0, 0, 0.5);
 }
