--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ header {
 }
 .search-header {
   font-size: 1.5rem;
+  letter-spacing: 2px;
+  font-weight: 300;
 }
 
 .search-bar {
@@ -84,6 +86,7 @@ header {
 
 #cityName {
   margin-right: 2%;
+
 }
 .city-history-display {
   margin-left: 5%;
@@ -92,6 +95,7 @@ header {
 a {
   text-decoration: none;
   color: darkgrey;
+  letter-spacing: 1px;
 }
 
 .five-day-forecast {
@@ -101,6 +105,8 @@ a {
 
 .five-day-forecast-header {
   font-size: 1.5rem;
+  letter-spacing: 2px;
+  font-weight: 300;
 }
 
 .forecastDisplay {
@@ -108,6 +114,7 @@ a {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 2%;
+
 }
 
 #forecastItem {
@@ -115,6 +122,7 @@ a {
   flex-direction: column;
   align-items: center;
   font-size: 1.1rem;
+
 }
 #forecastDate,
 #forecastTemp,
